Security Configuration modified to fix CORS bug